--- a/src/Components/CSS/Main.css
+++ b/src/Components/CSS/Main.css
@@ -1,3 +1,10 @@
+#main-div{
+    height: 100%;
+    width: 100%;
+    position: relative;
+    z-index: 1;
+}
+
 #navbar  {
     text-align: center ;
     background-image: url("../Images/Navbg.png");
@@ -51,29 +58,31 @@ textarea:focus, input:focus, button:focus{
 }
 
 .leaflet-container {
-    height: 66.5vh;
+    height: 68vh;
     width: 100%;
 }
 
 .displaybox{
     font-family: 'Varela Round', sans-serif;
-    z-index: 1000;
-    background-color: white;
+    background-color: rgb(255, 255, 255);
     position: absolute;
-    top:165px;
-    min-height:150px;
+    z-index: 100;
+    margin-top: -75px;
     border-radius: 15px;
     box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
-    left: 0; 
-    right: 0; 
-    margin-left: auto; 
-    margin-right: auto; 
+    margin-left: 90px;
+    margin-right: 90px;
+    left:0;
+    right: 0;
     padding-top: 30px;
     padding-bottom: 0px;
 }
+.rowStyle{
+    border-radius: 15px;
 
+}
 .cols{
-    margin-left: 15px;
+    text-align: center;
 }
 
 .bods{
@@ -90,13 +99,19 @@ textarea:focus, input:focus, button:focus{
     font-weight: 900;
 }
 
+#maps{
+   z-index: 5;
 
+}
 
 @media only screen and (max-device-width: 500px) {
 
     .displaybox{
+        margin-top: -110px;
+        margin-left: 30px;
+        margin-right: 30px;
        
-        top:150px;
+        
         
     }
 
@@ -122,7 +137,7 @@ textarea:focus, input:focus, button:focus{
         color: white;
         padding-top: 20px;
         padding-bottom: 20px;
-        font-size: 28px;
+        font-size: 25px;
     }
     
     .leaflet-container {
@@ -130,19 +145,43 @@ textarea:focus, input:focus, button:focus{
         
     }
 
-    .cols{
-        text-align: center;
-
-    }
-    
-   
     .cols p{
-        font-size: 12px;
+        font-size: 10px;
     }
     
     .cols h4{
-        font-size: 23px;
+        font-size: 18px;
+    }
+
+
+    ::placeholder { 
+        font-size: 13px;
     }
 
    
+   
+}
+
+
+@media only screen and (max-device-width: 800px) and (min-device-width: 500px) {
+
+
+    
+    .displaybox{
+        margin-top: -80px;
+        margin-left: 50px;
+        margin-right: 50px;
+       
+    }
+
+    .cols p{
+        font-size: 15px;
+    }
+    
+    .cols h4{
+        font-size: 21px;
+    }
+
+
+    
 }
