--- a/src/Components/CSS/Main.css
+++ b/src/Components/CSS/Main.css
@@ -81,12 +81,15 @@ textarea:focus, input:focus, button:focus{
     border-radius: 15px;
 
 }
+
 .cols{
-    text-align: center;
+   margin-left: 15px;
+
 }
 
 .bods{
     border-right: 2px solid rgba(189, 187, 187, 0.26);
+
 
 }
 .cols p{
@@ -110,8 +113,6 @@ textarea:focus, input:focus, button:focus{
         margin-top: -110px;
         margin-left: 30px;
         margin-right: 30px;
-       
-        
         
     }
 
@@ -145,6 +146,10 @@ textarea:focus, input:focus, button:focus{
         
     }
 
+    .cols{
+        padding: 15px;
+    }
+
     .cols p{
         font-size: 10px;
     }
@@ -172,6 +177,10 @@ textarea:focus, input:focus, button:focus{
         margin-left: 50px;
         margin-right: 50px;
        
+    }
+
+    .cols{
+        text-align: center;
     }
 
     .cols p{
